# src/routers/index.js
@@ -5,8 +5,8 @@ import productRouter from './products.js';
 
 const router = Router();
 
-router.use('/auth', authRouter);
-router.use('/user', userRouter);
-router.use('/products', productRouter);
+router.use('/auth', router);
+router.use('/user', router);
+router.use('/products', router);
 
 export default router;
